--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
       <div class="container">
         <header>
           <div class="mobile">
-            <img
-              src="./images/illustration-woman-online-mobile.svg"
-              alt="woman online"
-            />
+            <div class="mobile-img">
+              <img
+                class="img"
+                src="./images/illustration-woman-online-mobile.svg"
+                alt="woman online"
+              />
+              <img class="img-shadow" src="./images/bg-pattern-mobile.svg" />
+            </div>
           </div>
           <div class="desktop">
             <img
@@ -41,35 +45,39 @@
           <h1>FAQ</h1>
           <div class="question">
             <p>How many team members can I invite?</p>
-            <div class="answer">
+            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            <div class="answer dd-content">
               You can invite up to 2 additional users on the Free plan. There is
               no limit on team members for the Premium plan.
             </div>
           </div>
           <div class="question">
             <p>What is the maximum file upload size?</p>
-            <div class="answer">
+            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            <div class="answer dd-content">
               No more than 2GB. All files in your account must fit your allotted
               storage space.
             </div>
           </div>
           <div class="question">
             <p>How do I reset my password?</p>
-            <div class="answer">
+            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            <div class="answer dd-content">
               Click “Forgot password” from the login page or “Change password”
               from your profile page. A reset link will be emailed to you.
             </div>
           </div>
           <div class="question">
             <p>Can I cancel my subscription?</p>
-            <div class="answer">
+            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            <div class="answer dd-content">
               Yes! Send us a message and we’ll process your request no questions
               asked.
             </div>
           </div>
           <div class="question">
             <p>Do you provide additional support?</p>
-            <div class="answer">
+            <div class="answer dd-content">
               Chat and email support is available 24/7. Phone lines are open
               during normal business hours.
             </div>
@@ -82,7 +90,19 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="github.com/SilasFr">Silas Fernandes</a>.
     </div>
+
+    <script>
+      let ddContent = document.querySelectorAll("dd-content");
+
+      function dropdown(btn) {
+        let parents = btn.parentNode;
+        ddContent.forEach((item) => {
+          item.classList.toggle("show");
+        });
+        parents.lastElementChild.classList.toggle("show");
+      }
+    </script>
   </body>
 </html>
