--- a/index.html
+++ b/index.html
@@ -43,40 +43,52 @@
 
         <div class="faq">
           <h1>FAQ</h1>
-          <div class="question">
-            <p>How many team members can I invite?</p>
-            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+          <div class="dd-menu">
+            <p class="question">
+              How many team members can I invite?
+              <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            </p>
             <div class="answer dd-content">
               You can invite up to 2 additional users on the Free plan. There is
               no limit on team members for the Premium plan.
             </div>
           </div>
-          <div class="question">
-            <p>What is the maximum file upload size?</p>
-            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+          <div class="dd-menu">
+            <p class="question">
+              What is the maximum file upload size?
+              <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            </p>
             <div class="answer dd-content">
               No more than 2GB. All files in your account must fit your allotted
               storage space.
             </div>
           </div>
-          <div class="question">
-            <p>How do I reset my password?</p>
-            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+          <div class="dd-menu">
+            <p class="question">
+              How do I reset my password?
+              <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            </p>
+
             <div class="answer dd-content">
               Click “Forgot password” from the login page or “Change password”
               from your profile page. A reset link will be emailed to you.
             </div>
           </div>
-          <div class="question">
-            <p>Can I cancel my subscription?</p>
-            <button class="dropdown" onclick="dropdown(this)">🔽</button>
+          <div class="dd-menu">
+            <p class="question">
+              Can I cancel my subscription?
+              <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            </p>
             <div class="answer dd-content">
               Yes! Send us a message and we’ll process your request no questions
               asked.
             </div>
           </div>
-          <div class="question">
-            <p>Do you provide additional support?</p>
+          <div class="dd-menu">
+            <p class="question">
+              Do you provide additional support?
+              <button class="dropdown" onclick="dropdown(this)">🔽</button>
+            </p>
             <div class="answer dd-content">
               Chat and email support is available 24/7. Phone lines are open
               during normal business hours.
@@ -101,7 +113,7 @@
         ddContent.forEach((item) => {
           item.classList.toggle("show");
         });
-        parents.lastElementChild.classList.toggle("show");
+        parents.parentNode.lastElementChild.classList.toggle("show");
       }
     </script>
   </body>
